Fixed text description and visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,9 @@ div.titleContainer p {
 	left: 50%;
 	transform: translate(0, -50%);
 }
+
+#description{
+	font-family: "Georgia", Times, Serif;
+	color: #FFFFFF;
+	text-align: center;
+}
